"created html file"

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
   <div class="title">
     <p>Carbon Emission tracker </p>
   </div>
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="index.css">
   
   
    
