--- a/templates/input.html
+++ b/templates/input.html
@@ -3,175 +3,219 @@
 <head>
     <title>Vehicle Information Form</title>
 </head>
-<body>
-    <form method="post" action="/process_form">
-        <div class="Wrapper">
-            <h1 class="Title">company name</h1>
-            <label for="Comp_name">Company Name:</label>
-        <select id="Comp_name">
-            <option value="acura">Acura</option>
-            <option value="alfa-romeo">Alfa Romeo</option>
-            <option value="aston-martin">Aston Martin</option>
-            <option value="audi">Audi</option>
-            <option value="bentley">Bentley</option>
-            <option value="bmw">BMW</option>
-            <option value="buick">Buick</option>
-            <option value="cadillac">Cadillac</option>
-            <option value="chevrolet">Chevrolet</option>
-            <option value="chrysler">Chrysler</option>
-            <option value="dodge">Dodge</option>
-            <option value="fiat">Fiat</option>
-            <option value="ford">Ford</option>
-            <option value="gmc">GMC</option>
-            <option value="honda">Honda</option>
-            <option value="hyundai">Hyundai</option>
-            <option value="infiniti">Infiniti</option>
-            <option value="jaguar">Jaguar</option>
-            <option value="jeep">Jeep</option>
-            <option value="kia">Kia</option>
-            <option value="lamborghini">Lamborghini</option>
-            <option value="land-rover">Land Rover</option>
-            <option value="lexus">Lexus</option>
-            <option value="lincoln">Lincoln</option>
-            <option value="maserati">Maserati</option>
-            <option value="mazda">Mazda</option>
-            <option value="mercedes-benz">Mercedes-Benz</option>
-            <option value="mini">Mini</option>
-            <option value="mitsubishi">Mitsubishi</option>
-            <option value="nissan">Nissan</option>
-            <option value="porsche">Porsche</option>
-            <option value="ram">Ram</option>
-            <option value="rolls-royce">Rolls-Royce</option>
-            <option value="scion">Scion</option>
-            <option value="smart">Smart</option>
-            <option value="srt">SRT</option>
-            <option value="subaru">Subaru</option>
-            <option value="toyota">Toyota</option>
-            <option value="volkswagen">Volkswagen</option>
-            <option value="volvo">Volvo</option>
-            <option value="genesis">Genesis</option>
-            <option value="bugatti">Bugatti</option>
-        </select>
+<body><form>
+    <div class="question">
+      <input type="text" required/>
+      <label>company name</label>
+      <select id="Comp_name">
+        <option value="acura">Acura</option>
+        <option value="alfa-romeo">Alfa Romeo</option>
+        <option value="aston-martin">Aston Martin</option>
+        <option value="audi">Audi</option>
+        <option value="bentley">Bentley</option>
+        <option value="bmw">BMW</option>
+        <option value="buick">Buick</option>
+        <option value="cadillac">Cadillac</option>
+        <option value="chevrolet">Chevrolet</option>
+        <option value="chrysler">Chrysler</option>
+        <option value="dodge">Dodge</option>
+        <option value="fiat">Fiat</option>
+        <option value="ford">Ford</option>
+        <option value="gmc">GMC</option>
+        <option value="honda">Honda</option>
+        <option value="hyundai">Hyundai</option>
+        <option value="infiniti">Infiniti</option>
+        <option value="jaguar">Jaguar</option>
+        <option value="jeep">Jeep</option>
+        <option value="kia">Kia</option>
+        <option value="lamborghini">Lamborghini</option>
+        <option value="land-rover">Land Rover</option>
+        <option value="lexus">Lexus</option>
+        <option value="lincoln">Lincoln</option>
+        <option value="maserati">Maserati</option>
+        <option value="mazda">Mazda</option>
+        <option value="mercedes-benz">Mercedes-Benz</option>
+        <option value="mini">Mini</option>
+        <option value="mitsubishi">Mitsubishi</option>
+        <option value="nissan">Nissan</option>
+        <option value="porsche">Porsche</option>
+        <option value="ram">Ram</option>
+        <option value="rolls-royce">Rolls-Royce</option>
+        <option value="scion">Scion</option>
+        <option value="smart">Smart</option>
+        <option value="srt">SRT</option>
+        <option value="subaru">Subaru</option>
+        <option value="toyota">Toyota</option>
+        <option value="volkswagen">Volkswagen</option>
+        <option value="volvo">Volvo</option>
+        <option value="genesis">Genesis</option>
+        <option value="bugatti">Bugatti</option>
+    </select>
+    </div>
+    <div class="question">
+      <input type="text" required/>
+      <label>vehicle class</label>
+      <select id="vehicleTypes">
+        <option value="compact">Compact</option>
+        <option value="suv-small">SUV - Small</option>
+        <option value="mid-size">Mid-Size</option>
+        <option value="two-seater">Two-Seater</option>
+        <option value="minicompact">Minicompact</option>
+        <option value="subcompact">Subcompact</option>
+        <option value="full-size">Full-Size</option>
+        <option value="station-wagon-small">Station Wagon - Small</option>
+        <option value="suv-standard">SUV - Standard</option>
+        <option value="van-cargo">Van - Cargo</option>
+        <option value="van-passenger">Van - Passenger</option>
+        <option value="pickup-truck-standard">Pickup Truck - Standard</option>
+        <option value="minivan">Minivan</option>
+        <option value="special-purpose-vehicle">Special Purpose Vehicle</option>
+        <option value="station-wagon-mid-size">Station Wagon - Mid-Size</option>
+        <option value="pickup-truck-small">Pickup Truck - Small</option>
+    </select>
+    
+    </div>
+    <div class="question">
+      <input type="text" required/>
+      <label>engine size</label>
+      <select id="engineSizes">
+        <option value="0.9">0.9</option>
+        <option value="1.0">1.0</option>
+        <option value="1.2">1.2</option>
+        <option value="1.3">1.3</option>
+        <option value="1.4">1.4</option>
+        <option value="1.5">1.5</option>
+        <option value="1.6">1.6</option>
+        <option value="1.8">1.8</option>
+        <option value="2.0">2.0</option>
+        <option value="2.1">2.1</option>
+        <option value="2.2">2.2</option>
+        <option value="2.3">2.3</option>
+        <option value="2.4">2.4</option>
+        <option value="2.5">2.5</option>
+        <option value="2.7">2.7</option>
+        <option value="2.8">2.8</option>
+        <option value="2.9">2.9</option>
+        <option value="3.0">3.0</option>
+        <option value="3.2">3.2</option>
+        <option value="3.3">3.3</option>
+        <option value="3.4">3.4</option>
+        <option value="3.5">3.5</option>
+        <option value="3.6">3.6</option>
+        <option value="3.7">3.7</option>
+        <option value="3.8">3.8</option>
+        <option value="4.0">4.0</option>
+        <option value="4.2">4.2</option>
+        <option value="4.3">4.3</option>
+        <option value="4.4">4.4</option>
+        <option value="4.6">4.6</option>
+        <option value="4.7">4.7</option>
+        <option value="4.8">4.8</option>
+        <option value="5.0">5.0</option>
+        <option value="5.2">5.2</option>
+        <option value="5.3">5.3</option>
+        <option value="5.4">5.4</option>
+        <option value="5.5">5.5</option>
+        <option value="5.6">5.6</option>
+        <option value="5.7">5.7</option>
+        <option value="5.8">5.8</option>
+        <option value="5.9">5.9</option>
+        <option value="6.0">6.0</option>
+        <option value="6.2">6.2</option>
+        <option value="6.3">6.3</option>
+        <option value="6.4">6.4</option>
+        <option value="6.5">6.5</option>
+        <option value="6.6">6.6</option>
+        <option value="6.7">6.7</option>
+        <option value="6.8">6.8</option>
+        <option value="8.0">8.0</option>
+        <option value="8.4">8.4</option>            
+    </select>
+    </div>
+    <div class="question">
+      <input type="text" required/>
+      <label for="cyl">Cylinders:</label>
+      <select id="numberOptions">
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="8">8</option>
+        <option value="10">10</option>
+        <option value="12">12</option>
+        <option value="16">16</option>
+
+    </select>
+
+    </div>
+    <div class="question">
+      <input type="text" required/>
+      <label for="trans">Transmission:</label>
+      <select id="Comp_name" name="Company Name">
+        <option value="AS5">AS5</option>
+        <option value="M6">M6</option>
+        <option value="AV7">AV7</option>
+        <option value="AS6">AS6</option>
+        <option value="AM7">AM7</option>
+        <option value="AS8">AS8</option>
+        <option value="A7">A7</option>
+        <option value="A4">A4</option>
+        <option value="A5">A5</option>
+        <option value="A8">A8</option>
+        <option value="AM6">AM6</option>
+        <option value="AV">AV</option>
+        <option value="AS7">AS7</option>
+        <option value="A9">A9</option>
+    </select>
+
+    </div><div class="question">
+      <input type="text" required/>
+      <label for="f_type">Fuel Type:</label>
+      <select id="f_type" name="Fuel Type">
+        <option value="Z">Z</option>
+        <option value="D">D</option>
+        <option value="X">X</option>
+        <option value="E">E</option>
+        <option value="N">EN</option>
+    </select>
+
+    </div><div class="question">
+      <label for="city">City MPG:</label>
+      <input type="text" id="city" name="city"><br>
+    </div><div class="question">
+      <input type="text" required/>
+      <label></label>
+    </div><div class="question">
+      <input type="text" required/>
+      <label></label>
+    </div><div class="question">
+      <input type="text" required/>
+      <label></label>
+    </div>
+    <button>Submit</button>
+  </form>
+            
+            
+      
         
 
 
         <label for="v_class">Vehicle Class:</label>
-        <select id="vehicleTypes">
-            <option value="compact">Compact</option>
-            <option value="suv-small">SUV - Small</option>
-            <option value="mid-size">Mid-Size</option>
-            <option value="two-seater">Two-Seater</option>
-            <option value="minicompact">Minicompact</option>
-            <option value="subcompact">Subcompact</option>
-            <option value="full-size">Full-Size</option>
-            <option value="station-wagon-small">Station Wagon - Small</option>
-            <option value="suv-standard">SUV - Standard</option>
-            <option value="van-cargo">Van - Cargo</option>
-            <option value="van-passenger">Van - Passenger</option>
-            <option value="pickup-truck-standard">Pickup Truck - Standard</option>
-            <option value="minivan">Minivan</option>
-            <option value="special-purpose-vehicle">Special Purpose Vehicle</option>
-            <option value="station-wagon-mid-size">Station Wagon - Mid-Size</option>
-            <option value="pickup-truck-small">Pickup Truck - Small</option>
-        </select>
         
 
         <label for="eng_size">Engine Size:</label>
-        <select id="engineSizes">
-            <option value="0.9">0.9</option>
-            <option value="1.0">1.0</option>
-            <option value="1.2">1.2</option>
-            <option value="1.3">1.3</option>
-            <option value="1.4">1.4</option>
-            <option value="1.5">1.5</option>
-            <option value="1.6">1.6</option>
-            <option value="1.8">1.8</option>
-            <option value="2.0">2.0</option>
-            <option value="2.1">2.1</option>
-            <option value="2.2">2.2</option>
-            <option value="2.3">2.3</option>
-            <option value="2.4">2.4</option>
-            <option value="2.5">2.5</option>
-            <option value="2.7">2.7</option>
-            <option value="2.8">2.8</option>
-            <option value="2.9">2.9</option>
-            <option value="3.0">3.0</option>
-            <option value="3.2">3.2</option>
-            <option value="3.3">3.3</option>
-            <option value="3.4">3.4</option>
-            <option value="3.5">3.5</option>
-            <option value="3.6">3.6</option>
-            <option value="3.7">3.7</option>
-            <option value="3.8">3.8</option>
-            <option value="4.0">4.0</option>
-            <option value="4.2">4.2</option>
-            <option value="4.3">4.3</option>
-            <option value="4.4">4.4</option>
-            <option value="4.6">4.6</option>
-            <option value="4.7">4.7</option>
-            <option value="4.8">4.8</option>
-            <option value="5.0">5.0</option>
-            <option value="5.2">5.2</option>
-            <option value="5.3">5.3</option>
-            <option value="5.4">5.4</option>
-            <option value="5.5">5.5</option>
-            <option value="5.6">5.6</option>
-            <option value="5.7">5.7</option>
-            <option value="5.8">5.8</option>
-            <option value="5.9">5.9</option>
-            <option value="6.0">6.0</option>
-            <option value="6.2">6.2</option>
-            <option value="6.3">6.3</option>
-            <option value="6.4">6.4</option>
-            <option value="6.5">6.5</option>
-            <option value="6.6">6.6</option>
-            <option value="6.7">6.7</option>
-            <option value="6.8">6.8</option>
-            <option value="8.0">8.0</option>
-            <option value="8.4">8.4</option>            
-        </select>
+        
         
 
         <label for="cyl">Cylinders:</label>
-        <select id="numberOptions">
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="8">8</option>
-            <option value="10">10</option>
-            <option value="12">12</option>
-            <option value="16">16</option>
-
-        </select>
+       
         <label for="trans">Transmission:</label>
-        <select id="Comp_name" name="Company Name">
-            <option value="AS5">AS5</option>
-            <option value="M6">M6</option>
-            <option value="AV7">AV7</option>
-            <option value="AS6">AS6</option>
-            <option value="AM7">AM7</option>
-            <option value="AS8">AS8</option>
-            <option value="A7">A7</option>
-            <option value="A4">A4</option>
-            <option value="A5">A5</option>
-            <option value="A8">A8</option>
-            <option value="AM6">AM6</option>
-            <option value="AV">AV</option>
-            <option value="AS7">AS7</option>
-            <option value="A9">A9</option>
-        </select>
+       
 
         
 
         <label for="f_type">Fuel Type:</label>
-        <select id="f_type" name="Fuel Type">
-            <option value="Z">Z</option>
-            <option value="D">D</option>
-            <option value="X">X</option>
-            <option value="E">E</option>
-            <option value="N">EN</option>
-        </select>
+        
 
         <label for="city">City MPG:</label>
         <input type="text" id="city" name="city"><br>
@@ -194,3 +238,5 @@
         <input type="submit" value="Submit">
 </body>
 </html>
+<link rel="stylesheet" href="input.css">
+  
