--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,7 @@
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="index.css">
+  <body>
 <nav>
     <p class="sitename">dashboard</p>
     <p class="menu">analytics</p>
@@ -24,8 +28,8 @@
   <div class="title">
     <p>Carbon Emission tracker </p>
   </div>
-  <link rel="stylesheet" href="css/main.css">
   
-  
+</body>
+</html>
    
   
