--- a/templates/input.html
+++ b/templates/input.html
@@ -4,6 +4,7 @@
     <title>Vehicle Information Form</title>
 </head>
 <body><form>
+  <h1>Enter details</h1>
     <div class="question">
       <input type="text" required/>
       <label>company name</label>
@@ -131,7 +132,7 @@
         <option value="8.0">8.0</option>
         <option value="8.4">8.4</option>            
     </select>
-    </div>
+  </div>
     <div class="question">
       <input type="text" required/>
       <label for="cyl">Cylinders:</label>
@@ -167,7 +168,7 @@
         <option value="AS7">AS7</option>
         <option value="A9">A9</option>
     </select>
-
+<br>
     </div><div class="question">
       <input type="text" required/>
       <label for="f_type">Fuel Type:</label>
