css and gitignore

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,4 @@
-<html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="index.css">
-  <body>
+
 <nav>
     <p class="sitename">dashboard</p>
     <p class="menu">analytics</p>
@@ -28,13 +25,8 @@
   <div class="title">
     <p>Carbon Emission tracker </p>
   </div>
-<<<<<<< HEAD
-=======
-  <link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="styles/index.css">
   
->>>>>>> f668c6b5f807ffa6333be9075e4effa98cfba20e
-  
-</body>
-</html>
+
    
   
