--- a/templates/input.html
+++ b/templates/input.html
@@ -238,5 +238,5 @@
         <input type="submit" value="Submit">
 </body>
 </html>
-<link rel="stylesheet" href="input.css">
+<link rel="stylesheet" href="style/input.css">
   
