--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
   <div class="title">
     <p>Carbon Emission tracker </p>
   </div>
-<link rel="stylesheet" href="styles/index.css">
+<link rel="stylesheet" type ="text/css" href="/static/index.css">
   
 
    
