--- a/templates/input.html
+++ b/templates/input.html
@@ -8,6 +8,7 @@
     <div class="question">
       <input type="text" required/>
       <label>company name</label>
+      <div style="display: flex; flex-direction: column;"></div>
       <select id="Comp_name">
         <option value="acura">Acura</option>
         <option value="alfa-romeo">Alfa Romeo</option>
@@ -238,5 +239,5 @@
         <input type="submit" value="Submit">
 </body>
 </html>
-<link rel="stylesheet" href="style/input.css">
+<link rel="stylesheet" href="styles/index.css">
   
