--- a/templates/input.html
+++ b/templates/input.html
@@ -137,7 +137,7 @@
     <div class="question">
       <input type="text" required/>
       <label for="cyl">Cylinders:</label>
-      <select id="numberOptions">
+      <select id="cylindernum">
         <option value="3">3</option>
         <option value="4">4</option>
         <option value="5">5</option>
@@ -182,7 +182,7 @@
 
     </div><div class="question">
       <label for="city">City MPG:</label>
-      <input type="text" id="city" name="city"><br>
+      <input type="text" id="city" name="city">
     </div><div class="question">
       <input type="text" required/>
       <label></label>
