--- a/templates/hello.html
+++ b/templates/hello.html
@@ -194,8 +194,8 @@
     <h1><input type="submit" value="Submit"></h1>
     {% if result is none %}
     <h2> Result</h2>
-    <p> Your total carbon emission today is: {{result}}</p>
+    <p color="black"> Your total carbon emission today is: {{result}}</p>
     {% endif %}
   
   
-  <link rel="stylesheet" href="hello.css">
+  <link rel="stylesheet" href="static/hello.css">
