--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,9 @@
 
 <nav>
-    <p class="sitename">dashboard</p>
-    <p class="menu">analytics</p>
-    <p class="menu">overview</p>
-    <p class="menu">settings</p>
-    <p class="menu">about us</p>
     
-    <button> Contact US
-    </button>
+  <form action="/redirect-input" method="POST">
+    <button type="submit">Go to Input Page</button>
+</form>
   </nav>
   
 
